# comp2003-2025-2026-team-25

./: .gitignore  README.md  User Test Plan  pyproject.toml
Contrubiton/George_Holden/: Sprint1Presentation.pptx
Contrubiton/Jamie_Woodacre-sprint2/Python Script/: Conflict-resolution  run_main.sh  startup_script.py
Contrubiton/Jamie_Woodacre/Sprint1/: User Stories.docx
Contrubiton/Okyanus_Albas/Sprint 2/: RiskAssesment.docx
Contrubiton/Tetiana_Yarmola/Sprint1/: Sprint_1_Q&A.docx  user_personas.docx
Contrubiton/Tetiana_Yarmola/Sprint2/: summary.txt
Design Documents/: Design.docx  SprintPresentation.pptx  TeamContract.docx
General Files/Contrubiton/Jamie-Woodacre_QT-screen/: local.properties  settings.gradle.kts
General Files/Contrubiton/Jamie_Woodacre-QR_Scripts/: QR-API.py  QR-Scanner.py  QR-scan-test.py  UserID-Hash.py  integration.py
General Files/Design Documents/: Feedback.docx  GanttChartGroupProject(1).xlsx
General Files/Minutes/: README.md  client_minutes_log
Minutes/: client_minutes_log
QTROBOTAPP/: settings.gradle.kts
QTROBOTAPP/app/: build.gradle.kts
QTROBOTAPP/gradle/: libs.versions.toml
QTROBOTAPP/gradle/wrapper/: gradle-wrapper.properties
SourceCode/QT_Robot_App/: settings.gradle.kts
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  qt_robot.py  requirements.txt
backend/docs/: AUTHENTICATION_AND_AUTHORIZATION.md  GOOGLE_SIGNIN_INTEGRATION.md  KEYCLOAK_SETUP.md  README.md
backend/keycloak/: realm-export.json
backend/scripts/: test-auth.ps1
backend/tests/: test_health.py
(+273 files in other folders)
